# PyEventFlow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
pluginable_core/: context.py  event.py  exc.py  handler.py  proto.py
pyeventflow/: __init__.py  context.py  event.py  handler.py  proto.py
pyeventflow/bearer/: bearer.py  proto.py
pyeventflow/context/: __init__.py  context.py  exc.py
pyeventflow/handler/: __init__.py  handler.py  proto.py
pyflow/: context.py  event.py  handler.py  proto.py
src/pluginable_core/: __init__.py  app.py  context.py  event.py  exc.py  plugin.py
