[metadata]
name = PyFlow
version = attr: pyflow.__version__
author = Aleksander Szymborski
author_email = olek5188@gmail.com
;url = ""
;project_urls =
;
;licence = "MIT"
;description = ""
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    event
    event_loop
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11


[options]
packages = find:
package_dir =
    = src
install_requires =
    pydantic >= 2.0.3, < 3.0.0
zip_safe = True


[options.packages.find]
where = src

[options.extras_require]
;docs =
;    Sphinx == 6.1.3
;    furo == 0.8.0

;tests =
;    pytest == 7.2.1
;    pytest-asyncio == 0.20.3
;    pytest-mock == 3.10.0
;    coverage == 7.2.1
